--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "author": "Morgan English",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/password-hash": "^1.2.24",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "mz": "^2.7.0",
+    "password-hash": "^1.2.2",
     "winston": "^3.8.2"
   },
   "devDependencies": {
