--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "mz": "^2.7.0",
     "winston": "^3.8.2"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.11",
     "@types/mz": "^2.7.4",
     "@types/node": "^18.11.9",
     "tslint": "^6.1.3",
