--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Morgan English",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.12.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
